# nonlinear_systems

./: .gitignore  CMakeLists.txt  README.md  nonlinear_systems-config.cmake.in
docs/: Doxyfile  styleguide.txt
include/nonlinear_systems/misc/: coordinates.hpp  derivative.hpp  frequency_helper.hpp  helper.hpp  parse_arguments.hpp  statistics.hpp
include/nonlinear_systems/observers/: average_frequency.hpp  average_frequency_observer.hpp  instantaneous_frequency_observer.hpp  minimal_order_parameter_observer.hpp  order_parameter_observer.hpp  position_observer.hpp  statistics_observer.hpp
include/nonlinear_systems/odes/: harmonic_oscillator_ode.hpp  kuramoto_sakaguchi_ode.hpp  m_kuramoto_ode.hpp  m_kuramoto_sakaguchi_ode.hpp  m_kuramoto_sivashinsky_ode.hpp  rayleigh_mean_field.hpp  rayleigh_mean_field_ode.hpp  rayleigh_y_ode.hpp  reduced_m_kuramoto_sakaguchi_watanabe_strogatz.hpp  reduced_m_kuramoto_sakaguchi_watanabe_strogatz_ode.hpp
include/nonlinear_systems/systems/: generic_network.hpp  generic_system.hpp  kuramoto_sakaguchi_system.hpp  m_kuramoto_sakaguchi_system.hpp  rayleigh_mean_field_system.hpp  reduced_m_kuramoto_sakaguchi_watanabe_strogatz_system.hpp
include/ode/: rayleigh_y_ode.hpp
include/system/: generic_system.hpp
include/systems/: generic_system.hpp
test/: CMakeLists.txt  test_average_frequency_observer.cpp  test_coordinates.cpp  test_derivative.cpp  test_generic_network.cpp  test_generic_system.cpp  test_harmonic_oscillator_ode.cpp  test_helper.cpp  test_instantaneous_frequency_observer.cpp  test_kuramoto_sakaguchi_ode.cpp  test_m_kuramoto.cpp  test_m_kuramoto_sakaguchi_ode.cpp  test_m_kuramoto_sakaguchi_system.cpp  test_minimal_order_parameter_observer.cpp  test_observers.cpp  test_order_parameter_observer.cpp  test_parse_arguments.cpp  test_position_observer.cpp  test_rayleigh_mean_field.cpp  test_rayleigh_mean_field_ode.cpp  test_rayleigh_mean_field_system.cpp  test_reduced_m_kuramoto_sakaguchi_watanabe_strogatz_ode.cpp  test_reduced_m_kuramoto_sakaguchi_watanabe_strogatz_system.cpp  test_statistics.cpp  test_statistics_observer.cpp
